fix(dh): add cpr validator to move-in (#4723)

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -636,7 +636,12 @@
           "cpr2": "CPR 2",
           "companyName": "Company name",
           "cvr": "CVR 1",
-          "protectedAddress": "{{ meteringPoint.overview.shared.protectedAddress }}"
+          "protectedAddress": "{{ meteringPoint.overview.shared.protectedAddress }}",
+          "cprError": {
+            "containsLetters": "Can only contain letters",
+            "containsDash": "Can not contain dashes",
+            "invalidCprLength": "Must be 10 digits long"
+          }
         },
         "contactDetails": {
           "label": "Contact details",
