feat(dh): add cvr validation to input field

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -641,7 +641,8 @@
             "containsLetters": "Må ikke indeholde bogstaver",
             "containsDash": "Må ikke indeholde bindestreg",
             "invalidCprLength": "Skal bestå af 10 cifre"
-          }
+          },
+          "cvrInvalid": "{{ marketParticipant.actor.create.cvrInvalid }}"
         },
         "contactDetails": {
           "label": "Kontakdetaljer",
