Added charges domain to the project

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -358,6 +358,11 @@
     "3": "Øjebliksafregning (3)",
     "6": "Årsbaseret afregning (6)"
   },
+  "charges": {
+    "prices": {
+      "topBarTitle": "Priser"
+    }
+  },
   "meteringPoint": {
     "breadcrumb": "Søg målepunkt",
     "search": {
