--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -358,6 +358,11 @@
     "3": "Immediate settlement (3)",
     "6": "Yearly settlement (6)"
   },
+  "charges": {
+    "prices": {
+      "topBarTitle": "Prices"
+    }
+  },
   "meteringPoint": {
     "breadcrumb": "Search metering point",
     "search": {
