--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -223,6 +223,7 @@
         "requestCalculation": "Request calculation data"
       },
       "meteringPoints": "Metering Points",
+      "prices": "Prices",
       "marketParticipant": {
         "menuGroupLabel": "Market participants",
         "userManagement": "User Management",
