--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -360,7 +360,7 @@
     "6": "Årsbaseret afregning (6)"
   },
   "charges": {
-    "prices": {
+    "charges": {
       "topBarTitle": "Priser"
     }
   },
