Added table for charges

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -361,7 +361,16 @@
   },
   "charges": {
     "charges": {
-      "topBarTitle": "Priser"
+      "topBarTitle": "Priser",
+      "table": {
+        "columns": {
+          "id": "ID",
+          "type": "Type",
+          "name": "Navn",
+          "owner": "Ejer",
+          "status": "Status"
+        }
+      }
     }
   },
   "meteringPoint": {
