--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -360,7 +360,16 @@
   },
   "charges": {
     "charges": {
-      "topBarTitle": "Prices"
+      "topBarTitle": "Prices",
+      "table": {
+        "columns": {
+          "id": "ID",
+          "type": "Type",
+          "name": "Name",
+          "owner": "Owner",
+          "status": "Status"
+        }
+      }
     }
   },
   "meteringPoint": {
