feat(dh): initial move-in graphql mutation

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -690,6 +690,7 @@
           "D29": "Sekundær (D29)"
         }
       },
+      "success": "Tilflytning er nu registreret",
       "save": "Tilflyt kunde"
     }
   },
