--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -689,6 +689,7 @@
           "D29": "Secondary (D29)"
         }
       },
+      "success": "Move-in is now registered",
       "save": "Customer move-in"
     }
   },
