--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -1408,7 +1408,7 @@
       "MeteringPointAdministrator": "Metering point administrator",
       "MeterOperator": "Meter Operator",
       "SystemOperator": "System operator",
-      "DanishEnergyAgency": "Energistyrelsen",
+      "DanishEnergyAgency": "The Danish Energy Agency",
       "DataHubAdministrator": "DataHub system administrator",
       "IndependentAggregator": "Independent aggregator",
       "SerialEnergyTrader": "Serial Energy Trader",
