feat: Adds a foreign company checkbox

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -658,6 +658,7 @@
           "cpr2": "CPR 2",
           "companyName": "Kundenavn",
           "cvr": "CVR",
+          "foreignCompany": "Udenlandsk virksomhed",
           "protectedAddress": "{{ meteringPoint.overview.shared.protectedAddress }}",
           "cprError": {
             "containsLetters": "Må ikke indeholde bogstaver",
