Movein modal adjustments (#4776)
Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>
Co-authored-by: Dzhavat Ushev <dzu@energinet.dk>

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -658,6 +658,7 @@
           "cpr2": "CPR 2",
           "companyName": "Kundenavn",
           "cvr": "CVR",
+          "foreignCompany": "Udenlandsk virksomhed",
           "protectedAddress": "{{ meteringPoint.overview.shared.protectedAddress }}",
           "cprError": {
             "containsLetters": "Må ikke indeholde bogstaver",
@@ -675,8 +676,10 @@
           "attention": "Att.",
           "phoneNumber": "Telefonnr.",
           "mobile": "Mobil",
-          "email": "E-mail adresse",
-          "addressDetails": "Adresseoplysninger",
+          "email": "E-mail adresse"
+        },
+        "addressDetails": {
+          "label": "Adresseoplysninger",
           "addressSameAsMeteringPoint": "Samme som målepunktsadresse",
           "street": "Vejnavn",
           "houseNumber": "Husnummer",
