--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -657,6 +657,7 @@
           "cpr2": "CPR 2",
           "companyName": "Company name",
           "cvr": "CVR 1",
+          "foreignCompany": "Foreign company",
           "protectedAddress": "{{ meteringPoint.overview.shared.protectedAddress }}",
           "cprError": {
             "containsLetters": "Can only contain letters",
@@ -674,8 +675,10 @@
           "attention": "Attn.",
           "phoneNumber": "Phone number",
           "mobile": "Mobile",
-          "email": "Email address",
-          "addressDetails": "Address details",
+          "email": "Email address"
+        },
+        "addressDetails": {
+          "label": "Address details",
           "addressSameAsMeteringPoint": "Same as metering point address",
           "street": "Street",
           "houseNumber": "House number",
