feat: Adds address titles

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -681,6 +681,8 @@
         },
         "addressDetails": {
           "label": "Adresseoplysninger",
+          "legalAddressSection": "Juridisk address",
+          "technicalAddressSection": "Teknisk address",
           "addressSameAsMeteringPoint": "Samme som målepunktsadresse",
           "street": "Vejnavn",
           "houseNumber": "Husnummer",
