--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -680,6 +680,8 @@
         },
         "addressDetails": {
           "label": "Address details",
+          "legalAddressSection": "Legal address",
+          "technicalAddressSection": "Technical address",
           "addressSameAsMeteringPoint": "Same as metering point address",
           "street": "Street",
           "houseNumber": "House number",
