chore: updates postal district label to supplementary city name according to RHC

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -692,7 +692,7 @@
           "city": "Bynavn",
           "country": "Land",
           "roadCode": "Vejkode",
-          "postalDistrict": "Postdistrikt",
+          "supplementaryCityName": "Supplerende bynavn",
           "postBox": "Postboks",
           "municipalityCode": "Kommunekode",
           "municipalityCodeError": {
