--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -691,7 +691,7 @@
           "city": "City",
           "country": "Country",
           "roadCode": "Road code",
-          "postalDistrict": "Postal district",
+          "supplementaryCityName": "Supplementary city name",
           "postBox": "Post box",
           "municipalityCode": "Municipality code",
           "municipalityCodeError": {
