chore: corrects roadCode to streetCode

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -691,7 +691,7 @@
           "postalCode": "Postnummer",
           "city": "Bynavn",
           "country": "Land",
-          "roadCode": "Vejkode",
+          "streetCode": "Vejkode",
           "supplementaryCityName": "Supplerende bynavn",
           "postBox": "Postboks",
           "municipalityCode": "Kommunekode",
