--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -690,7 +690,7 @@
           "postalCode": "Postal code",
           "city": "City",
           "country": "Country",
-          "roadCode": "Road code",
+          "streetCode": "Street code",
           "supplementaryCityName": "Supplementary city name",
           "postBox": "Post box",
           "municipalityCode": "Municipality code",
