--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -672,6 +672,7 @@
           "legalContactSection": "Juridisk kontakt",
           "technicalContactSection": "Teknisk kontakt",
           "contactSameAsCustomer": "Samme som kundenavn",
+          "technicalSameAsLegal": "Samme som juridisk kontakt",
           "contactName": "Kontaktnavn",
           "attention": "Att.",
           "phoneNumber": "Telefonnr.",
