chore: WIP adds same as legal address functionality

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -685,6 +685,7 @@
           "legalAddressSection": "Juridisk adresse",
           "technicalAddressSection": "Teknisk adresse",
           "addressSameAsMeteringPoint": "Samme som målepunktsadresse",
+          "addressSameAsLegalAddress": "Samme som juridisk adresse",
           "street": "Vejnavn",
           "houseNumber": "Husnummer",
           "floor": "Etage",
