--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -684,6 +684,7 @@
           "legalAddressSection": "Legal address",
           "technicalAddressSection": "Technical address",
           "addressSameAsMeteringPoint": "Same as metering point address",
+          "addressSameAsLegalAddress": "Same as legal address",
           "street": "Street",
           "houseNumber": "House number",
           "floor": "Floor",
