chore(dh): update text

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -22,7 +22,7 @@
     "linkingMitId": "Tilknytter MitID"
   },
   "notFound": {
-    "title": "Vi beklager. Siden findes ikke.",
+    "title": "Siden findes ikke.",
     "message": "Det kan skyldes et gammelt bogmærke, forkert URL eller siden ikke findes længere.",
     "action": "Gå til startsiden"
   },
