--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -683,6 +683,7 @@
           "legalAddressSection": "Legal address",
           "technicalAddressSection": "Technical address",
           "addressSameAsMeteringPoint": "Same as metering point address",
+          "addressSameAsLegal": "Same as legal metering point address",
           "street": "Street",
           "houseNumber": "House number",
           "floor": "Floor",
