feat: changes sameAsCustomerName in technical contact to same as legal

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -672,6 +672,7 @@
           "legalContactSection": "Juridisk kontakt",
           "technicalContactSection": "Teknisk kontakt",
           "contactSameAsCustomer": "Samme som kundenavn",
+          "technicalContactSameAsLegal": "Samme Juridisk kontakt",
           "contactName": "Kontaktnavn",
           "attention": "Att.",
           "phoneNumber": "Telefonnr.",
