--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -676,10 +676,13 @@
           "attention": "Att.",
           "phoneNumber": "Telefonnr.",
           "mobile": "Mobil",
-          "email": "E-mail adresse"
+          "email": "E-mail adresse",
+          "invalidEmail": "Ugyldig e-mail"
         },
         "addressDetails": {
           "label": "Adresseoplysninger",
+          "legalAddressSection": "Juridisk adresse",
+          "technicalAddressSection": "Teknisk adresse",
           "addressSameAsMeteringPoint": "Samme som målepunktsadresse",
           "street": "Vejnavn",
           "houseNumber": "Husnummer",
@@ -688,10 +691,15 @@
           "postalCode": "Postnummer",
           "city": "Bynavn",
           "country": "Land",
-          "roadCode": "Vejkode",
-          "postalDistrict": "Postdistrikt",
+          "streetCode": "Vejkode",
+          "supplementaryCityName": "Supplerende bynavn",
           "postBox": "Postboks",
           "municipalityCode": "Kommunekode",
+          "municipalityCodeError": {
+            "containsLetters": "Må ikke indeholde bogstaver",
+            "startsWithZero": "Må ikke starte med 0",
+            "invalidMunicipalityCodeLength": "Skal bestå af 3 cifre"
+          },
           "darReference": "Dar reference",
           "nameAddressProtection": "Navne- og adressebeskyttelse"
         },
