fix(dh): minor adjustments

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -431,7 +431,7 @@
         "address": "Adresse",
         "country": "Land",
         "streetCode": "Vejkode",
-        "postDistrict": "Postdistrikt",
+        "citySubDivisionName": "Supplerende bynavn",
         "postBox": "Postboks",
         "municipalityCode": "Kommunekode",
         "darID": "DAR-ID",
@@ -513,7 +513,7 @@
         "address": "{{ meteringPoint.overview.shared.address }}",
         "country": "{{ meteringPoint.overview.shared.country }}",
         "streetCode": "{{ meteringPoint.overview.shared.streetCode }}",
-        "postDistrict": "{{ meteringPoint.overview.shared.postDistrict }}",
+        "citySubDivisionName": "{{ meteringPoint.overview.shared.citySubDivisionName }}",
         "postBox": "{{ meteringPoint.overview.shared.postBox }}",
         "municipalityCode": "{{ meteringPoint.overview.shared.municipalityCode }}",
         "darID": "{{ meteringPoint.overview.shared.darID }}",
@@ -525,7 +525,7 @@
         "postCodeAndCity": "Postnr. og by",
         "country": "{{ meteringPoint.overview.shared.country }}",
         "streetCode": "{{ meteringPoint.overview.shared.streetCode }}",
-        "postDistrict": "{{ meteringPoint.overview.shared.postDistrict }}",
+        "citySubDivisionName": "{{ meteringPoint.overview.shared.citySubDivisionName }}",
         "postBox": "{{ meteringPoint.overview.shared.postBox }}",
         "municipalityCode": "{{ meteringPoint.overview.shared.municipalityCode }}",
         "darID": "{{ meteringPoint.overview.shared.darID }}",
@@ -692,7 +692,7 @@
           "city": "Bynavn",
           "country": "Land",
           "streetCode": "Vejkode",
-          "supplementaryCityName": "Supplerende bynavn",
+          "citySubdivisionName": "Supplerende bynavn",
           "postBox": "Postboks",
           "municipalityCode": "Kommunekode",
           "municipalityCodeError": {
