--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -430,7 +430,7 @@
         "address": "Address",
         "country": "Country",
         "streetCode": "Street code",
-        "postDistrict": "Post district",
+        "citySubDivisionName": "Additional city name",
         "postBox": "POBox",
         "municipalityCode": "Municipality code",
         "darID": "DAR-ID",
@@ -512,7 +512,7 @@
         "address": "{{ meteringPoint.overview.shared.address }}",
         "country": "{{ meteringPoint.overview.shared.country }}",
         "streetCode": "{{ meteringPoint.overview.shared.streetCode }}",
-        "postDistrict": "{{ meteringPoint.overview.shared.postDistrict }}",
+        "citySubDivisionName": "{{ meteringPoint.overview.shared.citySubDivisionName }}",
         "postBox": "{{ meteringPoint.overview.shared.postBox }}",
         "municipalityCode": "{{ meteringPoint.overview.shared.municipalityCode }}",
         "darID": "{{ meteringPoint.overview.shared.darID }}",
@@ -524,7 +524,7 @@
         "postCodeAndCity": "Post code and city",
         "country": "{{ meteringPoint.overview.shared.country }}",
         "streetCode": "{{ meteringPoint.overview.shared.streetCode }}",
-        "postDistrict": "{{ meteringPoint.overview.shared.postDistrict }}",
+        "citySubDivisionName": "{{ meteringPoint.overview.shared.citySubDivisionName }}",
         "postBox": "{{ meteringPoint.overview.shared.postBox }}",
         "municipalityCode": "{{ meteringPoint.overview.shared.municipalityCode }}",
         "darID": "{{ meteringPoint.overview.shared.darID }}",
@@ -691,7 +691,7 @@
           "city": "City",
           "country": "Country",
           "streetCode": "Street code",
-          "supplementaryCityName": "Supplementary city name",
+          "citySubdivisionName": "Additional city name",
           "postBox": "Post box",
           "municipalityCode": "Municipality code",
           "municipalityCodeError": {
