Add skeleton variant of metering point status

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -461,7 +461,8 @@
         "CLOSED_DOWN": "Nedlagt",
         "NEW": "Ny",
         "CONNECTED": "Tilsluttet",
-        "DISCONNECTED": "Afbrudt"
+        "DISCONNECTED": "Afbrudt",
+        "UNKNOWN": "Ukendt"
       },
       "actions": {
         "actionsButton": "Handlinger",
