--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -460,7 +460,8 @@
         "CLOSED_DOWN": "Closed down",
         "NEW": "New",
         "CONNECTED": "Connected",
-        "DISCONNECTED": "Disconnected"
+        "DISCONNECTED": "Disconnected",
+        "UNKNOWN": "Unknown"
       },
       "actions": {
         "actionsButton": "Actions",
