--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -565,7 +565,7 @@
         },
         "columns": {
           "step": "Trin",
-          "createdAt": "Beskedtidspunkt",
+          "createdAt": "Beskedtidspkt.",
           "dueDate": "Forfaldsdato",
           "actor": "Aktør",
           "state": "Status"
