--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -460,7 +460,8 @@
         "CLOSED_DOWN": "Closed down",
         "NEW": "New",
         "CONNECTED": "Connected",
-        "DISCONNECTED": "Disconnected"
+        "DISCONNECTED": "Disconnected",
+        "UNKNOWN": "Unknown"
       },
       "actions": {
         "actionsButton": "Actions",
@@ -537,15 +538,37 @@
     "relatedMeteringPointsLoading": "Loading related metering points",
     "relatedMeteringPointsEmpty": "There are no related metering points",
     "historicalMeteringPoints": "Historical metering points",
-    "processes": {
+    "processOverview": {
       "columns": {
         "createdAt": "Time of message",
-        "documentType": "Type"
+        "documentType": "Type",
+        "state": "State",
+        "cutoffDate": "Cut-off date",
+        "initiator": "Initiating participant",
+        "actions": "Possible actions"
       },
       "filters": {
         "created": "Time",
         "includeViews": "Include views",
         "includeMasterMeasurementAndPriceRequests": "Include requests for master, measurement or price data"
+      },
+      "steps": {
+        "REQUEST_END_OF_SUPPLY": "Request end of supply (BRS-005)"
+      },
+      "details": {
+        "list": {
+          "createdAt": "Time of message",
+          "cutoff": "Cut-off date",
+          "reasonCode": "Reason code",
+          "initiator": "Initiating participant"
+        },
+        "columns": {
+          "step": "Step",
+          "createdAt": "Time of message",
+          "dueDate": "Due date",
+          "actor": "Actor",
+          "state": "State"
+        }
       }
     },
     "measurements": {
