--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -621,7 +621,7 @@
         "year": "Year"
       },
       "qualityNotAvailableInThisResolution": "Quality not available in this resolution",
-      "tooltip": "≈ Indicates if there are estimated values \n● Indicates if measurement data has changed",
+      "tooltip": "≈ Indicates if there are estimated values",
       "missingValues": "Missing values",
       "filters": {
         "showHistoricValues": "History",
